[package]
name = "cransubs"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suppaftp = "8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
